@@ -1,95 +1,98 @@
 package asksef.controller;
 
-import asksef.assembler.StaffModelAssembler;
+import asksef.assembler.AddressModelAssemblerSupport;
+import asksef.assembler.StaffModelAssemblerSupport;
+import asksef.entity.Address;
 import asksef.entity.Staff;
+import asksef.entity.entity_model.AddressModel;
+import asksef.entity.entity_model.StaffModel;
+import asksef.entity.repository.StaffRepository;
 import asksef.entity.service.StaffService;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.hateoas.CollectionModel;
-import org.springframework.hateoas.EntityModel;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.linkTo;
 import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.methodOn;
 
+@Slf4j
 @RestController
 @RequestMapping(value = "/api/staff")
 public class StaffController {
-
-    private static final Logger log = LoggerFactory.getLogger(StaffController.class);
+    private final StaffRepository staffRepository;
     private final StaffService staffService;
-    private final StaffModelAssembler staffModelAssembler;
+    private final StaffModelAssemblerSupport staffModelAssemblerSupport;
 
-    public StaffController(StaffService staffService, StaffModelAssembler staffModelAssembler) {
+    public StaffController(StaffRepository staffRepository, StaffService staffService,
+                           StaffModelAssemblerSupport staffModelAssemblerSupport) {
+        this.staffRepository = staffRepository;
         this.staffService = staffService;
-        this.staffModelAssembler = staffModelAssembler;
-        log.info("StaffController created");
+        this.staffModelAssemblerSupport = staffModelAssemblerSupport;
     }
 
     @GetMapping(value = "/all", produces = "application/hal+json")
-    @ResponseStatus(HttpStatus.OK)
-    public CollectionModel<EntityModel<Staff>> all() {
-        List<EntityModel<Staff>> entityModelList
-                = this.staffService.findAll().stream().
-                map(staffModelAssembler::toModel).collect(Collectors.toList());
-        log.info("All staffs found {}", entityModelList);
-        return CollectionModel.of(entityModelList,
-                linkTo(methodOn(StaffController.class).all()).withSelfRel());
+    public ResponseEntity<CollectionModel<StaffModel>> all() {
+        List<Staff> entityList = this.staffService.findAll().stream().toList();
+        return new ResponseEntity<>(this.staffModelAssemblerSupport.toCollectionModel(entityList), HttpStatus.OK);
     }
 
     @GetMapping(value = "/{id}", produces = "application/hal+json")
-    @ResponseStatus(HttpStatus.OK)
-    public EntityModel<Staff> one(@PathVariable Long id) {
-        Staff staff = this.staffService.findById(id);
-        return staffModelAssembler.toModel(staff);
+    public ResponseEntity<StaffModel> one(@PathVariable Long id) {
+        return this.staffRepository.findById(id)
+                .map(staffModelAssemblerSupport::toModel)
+                .map(ResponseEntity::ok)
+                .orElse(ResponseEntity.notFound().build());
     }
 
     @GetMapping
-    @ResponseStatus(HttpStatus.OK)
-    public EntityModel<Staff> findByUsername(@RequestParam(name = "username") String username) {
+    public ResponseEntity<StaffModel> findByUsername(@RequestParam(name = "username") String username) {
         Staff staff = this.staffService.findByUsername(username);
         log.info("Fetching staff : {}", staff);
-        return staffModelAssembler.toModel(staff);
+        return new ResponseEntity<>(staffModelAssemblerSupport.toModel(staff),HttpStatus.FOUND);
     }
 
-    /// /////////////////////////
+
     @PostMapping(value = "/add", produces = "application/hal+json")
-    @ResponseStatus(HttpStatus.CREATED)
-    public ResponseEntity<?> add(@RequestBody Staff staff) {
-        Staff savedStaff = this.staffService.save(staff);
-        EntityModel<Staff> staffEntityModel = staffModelAssembler.toModel(savedStaff);
+    public ResponseEntity<StaffModel> add(@RequestBody StaffModel staffModel) {
+        Staff savedStaff = this.staffService.save(staffModel);
+        StaffModel staffEntityModel = staffModelAssemblerSupport.toModel(savedStaff);
         log.info("staff saved: {}", staffEntityModel);
-//        return ResponseEntity.created(staffEntityModel.getRequiredLink(IanaLinkRelations.SELF).toUri()).body(staffEntityModel);
-        return ResponseEntity
-                .created(linkTo(methodOn(StaffController.class).one(savedStaff.getStaffId()))
-                        .toUri()).body(staffEntityModel);
+        return new ResponseEntity<>(staffEntityModel, HttpStatus.CREATED);
     }
 
     @PutMapping(value = "/update/{id}", produces = "application/hal+json")
-    @ResponseStatus(HttpStatus.NO_CONTENT)
-    public ResponseEntity<?> update(@PathVariable Long id, @RequestBody Staff newStaff) {
+    public ResponseEntity<StaffModel> update(@PathVariable Long id, @RequestBody Staff newStaff) {
         Staff updateStaff = this.staffService.update(id, newStaff);
-
-        EntityModel<Staff> entityModel = staffModelAssembler.toModel(updateStaff);
+        StaffModel entityModel = staffModelAssemblerSupport.toModel(updateStaff);
         log.info("Staff updated: {}", updateStaff);
-//        return ResponseEntity//                .created(entityModel.getRequiredLink(IanaLinkRelations.SELF)//                .toUri()).body(entityModel);
-        return ResponseEntity
-                .created(linkTo(methodOn(StaffController.class).one(id))
-                        .toUri()).body(entityModel);
+
+        return new ResponseEntity<>(entityModel, HttpStatus.NO_CONTENT);
     }
 
     @DeleteMapping(value = "/delete/{id}", produces = "application/hal+json")
-    @ResponseStatus(HttpStatus.NO_CONTENT)
     public ResponseEntity<?> delete(@PathVariable Long id) {
         this.staffService.delete(id);
         log.info("Deleted staff: {}", id);
         return new ResponseEntity<>("Staff entity deleted successfully.", HttpStatus.NO_CONTENT);
     }
+
+    @GetMapping(value = "/{id}/address", produces = "application/hal+json")
+    public ResponseEntity<AddressModel> findAddressOfStaff(@PathVariable("id") Long id) {
+        Address address = this.staffService.findAddressOfCustomer(id);
+        //  build address model
+        AddressModel addressModel = new AddressModelAssemblerSupport().toModel(address);
+        addressModel.add(linkTo(methodOn(CustomerController.class).findAddressOfCustomer(id)).withRel("Address of Customer"));
+        addressModel.add(linkTo(methodOn(CustomerController.class).one(id)).withRel("customer"));
+        return new ResponseEntity<>(addressModel, HttpStatus.OK);
+    }
+
+}
+
+
 //    public CollectionModel<EntityModel<Staff>> findByNames(@PathVariable String names) {
 //        List<EntityModel<Staff>> entityModelList = staffRepository.findByNames(names).
 //                stream().map(staffModelAssembler::toModel).collect(Collectors.toList());
@@ -98,4 +101,3 @@ public class StaffController {
 //                linkTo(methodOn(StaffController.class)
 //                        .findByNames(names)).withSelfRel());
 //    }
-}
